tests/fail/unique_freeze_move.stderr
error[E0440]: Cannot move 'p' while it is borrowed
 --> tests/fail/unique_freeze_move.tk:10:15
   |
 10 |     auto ^q = ^p 
   |               ^
